--- a/MediaPlayerAnimations/Form1.resx
+++ b/MediaPlayerAnimations/Form1.resx
@@ -350,7 +350,7 @@
   <data name="btnForward.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAoCAYAAAC8cqlMAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAC7xJREFUaEOlWXtwlNUV/1astHaszvhfR+109A9nnFGYUalVkEdHaHloRArIK4Q3
+        vAAADrwBlbxySQAAC7xJREFUaEOlWXtwlNUV/1astHaszvhfR+109A9nnFGYUalVkEdHaHloRArIK4Q3
         WgyMWLEIVWgIRpIQZFAUKHnwCgRIQhKW8IqEkBhoaSkGkCQQQmgSspt3Qgi/nt/9vrt7d7MbYfrH2Xv3
         nHvP+Z177j338VlerxednZ1oaWlBa2srurq60NjYiK5bt9DU1IT29nahNjQ3N6t25Omyra1NySnT/Sjj
         f63LK7zbt2+Ddti2o6ND9b0l+nV7bVvrvXWrS5Vs29LSquRsb/YzdVG/RWM0bANuV410J58RUWYCaHZk
@@ -459,6 +459,9 @@
   </data>
   <metadata name="timerAnimacion.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>244, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>55</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
